--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ p {
 }
 
 .container {
-  width: 20%;
+  width: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,8 +37,28 @@ p {
 }
 
 img {
-  width: 250px;
+  width: 100%;
   overflow: hidden;
   object-fit: contain;
   border-radius: 10px;
+}
+
+@media screen and (max-width: 375px) {
+  .container {
+    width: 250px;
+    top: 20%;
+  }
+
+  h1 {
+    font-size: 1.1rem;
+  }
+
+  p {
+    font-size: 0.8rem;
+    width: 200px;
+  }
+
+  img {
+    width: 150px;
+  }
 }
